--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eth",
     "crypto"
   ],
-  "author": "nthuu11",
+  "author": "0xera",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/nthuu11/0xEra-check-balance/issues"
